// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="autocomplete-search"
>
  <div
    className="search-box"
  >
    <span
      className="prepend"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <input
      className="form-control"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      value=""
    />
  </div>
</div>
`;

exports[`(2) With query 1`] = `
<div
  className="autocomplete-search"
>
  <div
    className="search-box"
  >
    <span
      className="prepend"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <input
      className="form-control"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      value="foo"
    />
  </div>
</div>
`;

exports[`(3) With account suggestions 1`] = `
<div
  className="autocomplete-search"
>
  <div
    className="search-box"
  >
    <span
      className="prepend"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <input
      className="form-control"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      value="@foo"
    />
  </div>
  <div
    className="autocomplete-list"
  >
    <div
      className="list-header"
    >
      <span>
        Users
      </span>
    </div>
    <div
      className="list-body"
    >
      <div
        className="list-item"
        onClick={[Function]}
      >
        <span
          className="user-avatar small"
          onClick={[Function]}
          role="none"
          style={
            Object {
              "backgroundImage": "url(https://images.hive.blog/u/foo/avatar/medium)",
            }
          }
        />
        <span
          className="item-label"
        >
          foo
        </span>
      </div>
      <div
        className="list-item"
        onClick={[Function]}
      >
        <span
          className="user-avatar small"
          onClick={[Function]}
          role="none"
          style={
            Object {
              "backgroundImage": "url(https://images.hive.blog/u/foox/avatar/medium)",
            }
          }
        />
        <span
          className="item-label"
        >
          foox
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`(4) With tag suggestions 1`] = `
<div
  className="autocomplete-search"
>
  <div
    className="search-box"
  >
    <span
      className="prepend"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <input
      className="form-control"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      value="#foo"
    />
  </div>
  <div
    className="autocomplete-list"
  >
    <div
      className="list-header"
    >
      <span>
        Tags
      </span>
    </div>
    <div
      className="list-body"
    >
      <div
        className="list-item"
        onClick={[Function]}
      >
        <span
          className="item-label"
        >
          foo
        </span>
      </div>
      <div
        className="list-item"
        onClick={[Function]}
      >
        <span
          className="item-label"
        >
          foox
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`(5) With community suggestions 1`] = `
<div
  className="autocomplete-search"
>
  <div
    className="search-box"
  >
    <span
      className="prepend"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <input
      className="form-control"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      value="$foo"
    />
  </div>
  <div
    className="autocomplete-list"
  >
    <div
      className="list-header"
    >
      <span>
        Communities
      </span>
    </div>
    <div
      className="list-body"
    >
      <div
        className="list-item"
        onClick={[Function]}
      >
        <span
          className="item-label"
        >
          GEMS
        </span>
      </div>
    </div>
  </div>
</div>
`;
